--- a/index.html
+++ b/index.html
@@ -49,6 +49,239 @@
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+	    <style>
+		    .container {
+  width: 400px;
+  height: 100px;
+  position: relative;
+  perspective: 1000px;
+  left: calc(50% - 180px);
+  top: 100px;
+}
+
+#cube {
+  width: 500px;
+  height: 100px;
+  position: absolute;
+  transform-style: preserve-3d;
+  animation: rotate 10s infinite ease;
+}
+
+#cube figure {
+  margin: 0;
+  width: 350px;
+  height: 100px;
+  display: block;
+  position: absolute;
+  font-family: 'Raleway', sans-serif;
+  font-size: 75px;
+  font-weight: 800;
+}
+
+#cube .cube1 {
+  transform: rotateY( 0deg) translateZ( 50px);
+  animation: strengthsCubeText1 10s infinite ease;
+  color: #E91E63;
+}
+
+#cube .cube2 {
+  transform: rotateX( 180deg) translateZ( 50px);
+  animation: strengthsCubeText3 10s infinite ease;
+  color: #9C27B0;
+}
+
+#cube .cube3 {
+  transform: rotateX( 90deg) translateZ( 50px);
+  animation: strengthsCubeText4 10s infinite ease;
+  color: #2196F3;
+}
+
+#cube .cube4 {
+  transform: rotateX( -90deg) translateZ( 50px);
+  animation: strengthsCubeText2 10s infinite ease;
+  color: #4CAF50;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateX(0deg)
+  }
+  20% {
+    transform: rotateX(0deg)
+  }
+  25% {
+    transform: rotateX(90deg)
+  }
+  45% {
+    transform: rotateX(90deg)
+  }
+  50% {
+    transform: rotateX(180deg)
+  }
+  70% {
+    transform: rotateX(180deg)
+  }
+  75% {
+    transform: rotateX(270deg)
+  }
+  95% {
+    transform: rotateX(270deg)
+  }
+  100% {
+    transform: rotateX(360deg)
+  }
+}
+
+@keyframes strengthsCubeRotate {
+  0% {
+    transform: rotateX(0deg)
+  }
+  20% {
+    transform: rotateX(0deg)
+  }
+  25% {
+    transform: rotateX(90deg)
+  }
+  45% {
+    transform: rotateX(90deg)
+  }
+  50% {
+    transform: rotateX(180deg)
+  }
+  70% {
+    transform: rotateX(180deg)
+  }
+  75% {
+    transform: rotateX(270deg)
+  }
+  95% {
+    transform: rotateX(270deg)
+  }
+  100% {
+    transform: rotateX(360deg)
+  }
+}
+
+@keyframes strengthsCubeText1 {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  95% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes strengthsCubeText2 {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  45% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  95% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes strengthsCubeText3 {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  95% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes strengthsCubeText4 {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+	    </style>
 
     </head>
 	
@@ -99,6 +332,14 @@
 	
 		<!--welcome-hero start -->
 		<section id="welcome-hero" class="welcome-hero">
+			<section class="container">
+  <div id="cube" style="position:absolute; margin-top:100px;" >
+    <figure class="cube1">HTML/CSS</figure>
+    <figure class="cube2">JAVASCRIPT/REACT.JS</figure>
+    <figure class="cube3">TAILWIND/BOOTSTRAP</figure>
+    <figure class="cube4">LARAVEL</figure>
+  </div>
+</section>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
