--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 	    <style>
-		    .container {
+		    .containers {
   width: 400px;
   height: 100px;
   position: relative;
@@ -330,8 +330,8 @@
 		</header><!-- /.top-area-->
 		<!-- top-area End -->
 
-		<section class="container">
-  <div id="cube" style="position:absolute; margin-top:100px;" >
+		<section class="containers" style="position:absolute; margin-top:100px;">
+  <div id="cube"  >
     <figure class="cube1">HTML/CSS</figure>
     <figure class="cube2">JAVASCRIPT/REACT.JS</figure>
     <figure class="cube3">TAILWIND/BOOTSTRAP</figure>
