--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 		</header><!-- /.top-area-->
 		<!-- top-area End -->
 
-		<section class="containers" style="position:absolute; margin-top:100px;">
+		<section class="containers" style="position:absolute; margin-top:100px; z-index:80;">
   <div id="cube"  >
     <figure class="cube1">HTML/CSS</figure>
     <figure class="cube2">JAVASCRIPT/REACT.JS</figure>
