--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
 		<section class="containers" style="position:absolute; margin-top:100px; z-index:80;">
   <div id="cube"  >
     <figure class="cube1">HTML/CSS</figure>
-    <figure class="cube2">JAVASCRIPT/REACT.JS</figure>
-    <figure class="cube3">TAILWIND/BOOTSTRAP</figure>
+    <figure class="cube2">JAVASCRIPT</figure>
+    <figure class="cube3">React.js</figure>
     <figure class="cube4">LARAVEL</figure>
   </div>
 </section>
