--- a/index.html
+++ b/index.html
@@ -281,6 +281,11 @@
     opacity: 0;
   }
 }
+		    @media (max-width:800px){
+                         .containers{
+			 margin-buttom:20px 0px;
+			 }
+		    }
 	    </style>
 
     </head>
