--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 }
 		    @media (max-width:800px){
                          .containers{
-			 margin-buttom:30px;
+			 margin-bottom:30px;
 			 }
 		    }
 	    </style>
