--- a/index.html
+++ b/index.html
@@ -335,14 +335,14 @@
 		</header><!-- /.top-area-->
 		<!-- top-area End -->
 
-		<section class="containers" style="position:absolute; margin-top:100px; z-index:80;">
+<!-- 		<section class="containers" style="position:absolute; margin-top:100px; z-index:80;">
   <div id="cube"  >
     <figure class="cube1">HTML/CSS</figure>
     <figure class="cube2">JAVASCRIPT</figure>
     <figure class="cube3">React.js</figure>
     <figure class="cube4">LARAVEL</figure>
   </div>
-</section>
+</section> -->
 		<!--welcome-hero start -->
 		<section id="welcome-hero" class="welcome-hero">
 			
