--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/ibrainca.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://gyanvidigital.github.io/ibrain/">
 												Frontend Development
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -826,7 +826,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/QueckSilver.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://quicksilvermakeovers.com/">
 												Full-Stack Development
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -837,7 +837,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/college_menu.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://dravinashsinghgastro.com/">
 												Full-Stack Development
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -848,7 +848,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/saloon.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://ramamathauli.in/">
 												web development
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -856,7 +856,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/car.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://quicksilvermakeovers.in/">
 												web development
 											</a>
 										</div><!-- /.isotope-overlay -->
